# flc-conference

./: .gitignore  Procfile  app.py  build.sh  config.py  create_admin.py  db.py  models.py  pyproject.toml  replit.nix  requirements.txt  run.py  start.sh
app/: __init__.py  commands.py  config.py  create_admin.py  extensions.py  models.py
app/routes/: admin.py  auth.py  main.py  payment.py  registration.py
app/services/: __init__.py  email_service.py  payment_service.py
app/static/: countries.json
app/static/css/: admin.css  styles.css
app/static/images/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1743269113681.txt
app/static/js/: admin.js  payment.js  script.js
app/templates/: accommodation.html  base.html  error.html  index.html  nonfl-registration.html  payment.html  pre-registration.html  registration.html  success.html  timeline.html
app/templates/admin/: admin_base.html  dashboard.html  login.html  registration_detail.html  registrations.html  search_results.html  setup.html
instance/: conference.db
static/css/: admin.css  styles.css
static/js/: countdown.js  payment.js  script.js  timeline.js  validation.js
templates/: accommodation.html  base.html  error.html  index.html  payment.html  registration.html  success.html  timeline.html
templates/admin/: admin_base.html  dashboard.html  login.html  registrations.html  search_results.html  setup.html
